# projeto-transporte-iot

./: .env  Dockerfile.aggregator  Dockerfile.consumer  Dockerfile.producer  Dockerfile.test  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main_ci_cd.yml
config/: db_config.py
scripts/: setup-local-env.sh
src/consumer/: data_processor.py  main.py
src/data_aggregator/: daily_aggregator.py
src/models/: db_models.py  sensor_data.py
src/producer/: kafka_producer.py  run_simulador.py  sensor_simulator.py
testes/: geracao_dados.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_kafka_integration.py
tests/unit/: test_consumer.py  test_producer.py
