[tool.poetry]
name = "projeto-transporte-iot"
version = "0.1.0"
description = "Projeto com a finalidade de aplicar conceitos de engenharia de dados com o contexto de processamento de dados de transporte"
authors = ["Marcos Santos <marcos.vini2727@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"